@@ -4,6 +4,7 @@ This file documents the revision history for Perl extension HTTP::Body.
         - Added support for chunked requests if no $length value is passed to new().
         - Fixed urlencoded parser to handle spaces after semicolons and equal signs
           in the value. (Tom Heady, http://rt.cpan.org/Ticket/Display.html?id=31055)
+        - Fixed multipart test to properly clean up temporary files.
 
 0.9   2007-03-27 14:00:00
         - Fixed bug where empty fields in multipart/form-data were ignored.
